// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HtmlMapper renders all non-whitelisted components with acceptUnknown enabled 1`] = `
<p
  id="test-html"
>
  Af deel pomp soms tijd veel ad. En 
  <strong>
    voorloopig
  </strong>
   uitgegeven en nu ad verkochten beschikken. Al zout al in over bord te. Voorschijn moeilijker wedijveren na op. Zelf kilo zoon wel dag ruwe gas. Grayah de op vloeit na is goeden. Cenis langs maken nemen al ad klein de te.
  <br />
  Bepaalde gebruikt de verrezen 
  <em>
    gestoken schatten
  </em>
   en 
  <strong>
    verbouwd
  </strong>
  . 
  <br />
  Krachten nu eveneens na in op nadering britsche maleiers verbruik. 
</p>
`;

exports[`HtmlMapper renders custom components 1`] = `
<h6
  class="test-html"
>
  Af deel pomp soms tijd veel ad. En 
   uitgegeven en nu ad verkochten beschikken. Al zout al in over bord te. Voorschijn moeilijker wedijveren na op. Zelf kilo zoon wel dag ruwe gas. Grayah de op vloeit na is goeden. Cenis langs maken nemen al ad klein de te.
  Bepaalde gebruikt de verrezen 
   en 
  . 
  Krachten nu eveneens na in op nadering britsche maleiers verbruik. 
</h6>
`;

exports[`HtmlMapper renders whitelisted components 1`] = `
<p
  id="test-html"
>
  Af deel pomp soms tijd veel ad. En 
   uitgegeven en nu ad verkochten beschikken. Al zout al in over bord te. Voorschijn moeilijker wedijveren na op. Zelf kilo zoon wel dag ruwe gas. Grayah de op vloeit na is goeden. Cenis langs maken nemen al ad klein de te.
  Bepaalde gebruikt de verrezen 
   en 
  . 
  Krachten nu eveneens na in op nadering britsche maleiers verbruik. 
</p>
`;
